fixed image size issue

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/project-two.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/project-two-two.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Productive Coffee</h4>
@@ -171,7 +171,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/project-three.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/project-three-two.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>What's In My Fridge </h4>
@@ -185,7 +185,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/hackathon.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/hackathon-two.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Homeless or Hipster? </h4>
@@ -491,7 +491,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Homeless Or Hipster?</h2>
-                            <p class="item-intro text-muted">When at our offices I often got confused as to whether someone was homeless, or just Hipster.  Therefore I devised a game to see if other had the same problem distinguishing between the two.</p>
+                            <p class="item-intro text-muted">When at our offices I often got confused as to whether someone was homeless, or just Hipster.  Therefore I devised a game to see if others had the same problem distinguishing between the two.</p>
                             <img class="img-responsive img-centered" src="img/portfolio/hackathon.png" alt="">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit perferendis temporibus enim, maxime expedita quo rerum consequatur suscipit nam sequi dolorum perspiciatis autem aliquid, et. Debitis fugiat sequi quae veniam.</p>
                             <ul class="list-inline">
