--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Background</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Me</a>
+                        <a class="page-scroll" href="#team">Online Networks</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -201,7 +201,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
+                    <h2 class="section-heading">Background</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -289,13 +289,13 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
-                        <p class="text-muted">Lead Designer</p>
+                        <img src="img/team/profile-photo.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Ellie McGregor</h4>
+                        <p class="text-muted">Full Stack Web Developer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/elliemcgregor1"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://github.com/EllieMcGregor"><i class="fa fa-github"></li></a>
                             </li>
                             <li><a href="https://www.linkedin.com/profile/view?id=375555332&trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin"></i></a>
                             </li>
