--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
-                    <h3 class="section-subheading text-muted">I have been trained as full stack developer, but I do have some favourites.</h3>
+                    <h3 class="section-subheading text-muted">I have been trained as a full stack developer, but I do have some favourites.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -295,10 +295,10 @@
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/elliemcgregor1"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://github.com/EllieMcGregor"><i class="fa fa-github"></li></a>
                             </li>
                             <li><a href="https://www.linkedin.com/profile/view?id=375555332&trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin"></i></a>
                             </li>
+                            <li><a href="https://github.com/EllieMcGregor"><i class="fa fa-github"></li></a> 
                         </ul>
                     </div>
                 </div>
