fixed git hub multiply icon problem

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                             </li>
                             <li><a href="https://www.linkedin.com/profile/view?id=375555332&trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin"></i></a>
                             </li>
-                            <li><a href="https://github.com/EllieMcGregor"><i class="fa fa-github"></li></a> 
+                            <li><a href="https://github.com/EllieMcGregor"><i class="fa fa-github"></i></li></a> 
                         </ul>
                     </div>
                 </div>
