--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Background</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">A little bit about what I've done the last couple of years.</h3>
                 </div>
             </div>
             <div class="row">
@@ -210,15 +210,15 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/polo-action.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>2007-2010</h4>
+                                    <h4 class="subheading">Young England Polo</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">I have played since I was 7 and it has been a significant aspect of my life. This has been reflected in the fact that I have represented England for 3 years, and did my first tour to America when I was 12.  I was the only girl playing for an all boys Young England team at the time. This resulted in me winning best playing under 16 girl in the United Kingdom (2010) </p>
                                 </div>
                             </div>
                         </li>
