added a more indepth description of what productive coffee did and how we did it as a team

--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
                             <h2>Productive Coffee</h2>
                             <p class="item-intro text-muted">An App to help coffee lovers get connected with coffee near them.</p>
                             <img class="img-responsive img-centered" src="img/portfolio/project-two.png" alt="">
+                            <p>Project two was a group project and we were given a week to complete it.  We succeeded in our goal of creating a clean and functional app.  We made sure to have three meetings or checkins a day in order to make sure the team was clear on their tasks.  Another way we made sure that there was minimal complications was through each of us having our own development branch, so that the master only had working code.</p>
                             <ul class="list-inline">
                                 <li><a href="https://github.com/EllieMcGregor/project_2_productive_coffee">GitHub</i></a>
                                 <li><strong>Created: </strong> January 2014</li>
