greater description on ga schedule planner

--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
                             <h2>GA Schedule Planner</h2>
                             <p class="item-intro text-muted">This was my first project, it's not pretty but it was a solid rails app.  And represents how far I've come.</p>
                             <img class="img-responsive" src="img/portfolio/project-one.png" alt="">
+                            <p>This was my first project and I was given a week to do it.  I chose this project as it had the most associations, something which I was not confident with.  By the end of the week, and after working with seven tables, I felt it was something I had mastered. </p>
                             <ul class="list-inline">
                                 <li><a href="https://github.com/EllieMcGregor/project_1">GitHub</i></a>
                                 <li><strong>Created: </strong> December 2014</li>
