added trello to my links

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
                             <li><a href="https://www.linkedin.com/profile/view?id=375555332&trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin"></i></a>
                             </li>
                             <li><a href="https://github.com/EllieMcGregor"><i class="fa fa-github"></i></li></a> 
+                            <li><a href="https://trello.com/b/Pv6bGGDi/project-3"><i class="fa fa-trello"></i></li></a> 
                         </ul>
                     </div>
                 </div>
