added a link to heroku on project 1

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                             <img class="img-responsive" src="img/portfolio/project-one.png" alt="">
                             <p>This was my first project and I was given a week to do it.  I chose this project as it had the most associations, something which I was not confident with.  By the end of the week, and after working with seven tables, I felt it was something I had mastered. </p>
                             <ul class="list-inline">
-                                <li><a href="https://github.com/EllieMcGregor/project_1">GitHub</i></a>
+                                <li><a href="https://quiet-lake-9717.herokuapp.com/">Heroku</i></a>
                                 <li><strong>Created: </strong> December 2014</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
