added hipster or homeless heroku link

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                             <img class="img-responsive img-centered" src="img/portfolio/hackathon.png" alt="">
                             <p class="item-intro text-muted">When at our offices I often got confused as to whether someone was homeless, or just Hipster.  Therefore I devised a game to see if others had the same problem distinguishing between the two.</p>
                             <ul class="list-inline">
-                                <li><a href="https://github.com/EllieMcGregor/Hackathon">GitHub</i></a>
+                                <li><a href="https://salty-ridge-2446.herokuapp.com/">Heroku</i></a>
                                 <li><strong>Created: </strong> January 2014</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
