added heroku link to productive coffee

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                             <img class="img-responsive img-centered" src="img/portfolio/project-two.png" alt="">
                             <p>Project two was a group project and we were given a week to complete it. We met all of our MVP'S and created a clean and functional app.  We made sure to have three meetings, or checkins, a day in order to make sure that everyone on the team was clear on their tasks.  Another way we made sure that there was minimal complications was through each of us having our own development branch, so that the master only had working code.</p>
                             <ul class="list-inline">
-                                <li><a href="https://github.com/EllieMcGregor/project_2_productive_coffee">GitHub</i></a>
+                                <li><a href="https://limitless-savannah-1158.herokuapp.com/">Heroku</i></a>
                                 <li><strong>Created: </strong> January 2014</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
